--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Git Instruction</title>
   </head>
   <body>
-    <p>hello world!</p>
+    <ol>
+      <li>git add . - Добавить изменения</li>
+    </ol>
   </body>
 </html>
