--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <ol>
       <li>git add . - Добавить изменения</li>
+      <li>git commit -m"" -Добавить коммит</li>
     </ol>
   </body>
 </html>
