--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <ol>
       <li>git add . - Добавить изменения</li>
       <li>git commit -m"" -Добавить коммит</li>
+      <li>git push -Отправить изменения на удаленный репозиторий</li>
     </ol>
   </body>
 </html>
