--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <li>git add . - Добавить изменения</li>
       <li>git commit -m"" -Добавить коммит</li>
       <li>git push -Отправить изменения на удаленный репозиторий</li>
+      <li>git checkout -b branch-name -Добавить новую ветку</li>
     </ol>
   </body>
 </html>
