--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <li>git commit -m"" -Добавить коммит</li>
       <li>git push -Отправить изменения на удаленный репозиторий</li>
       <li>git checkout -b branch-name -Добавить новую ветку</li>
+      <li>git pull -Стянуть изменения с удаленного репозитория</li>
     </ol>
   </body>
 </html>
