--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <li>git push -Отправить изменения на удаленный репозиторий</li>
       <li>git checkout -b branch-name -Добавить новую ветку</li>
       <li>git pull -Стянуть изменения с удаленного репозитория</li>
+      <li>git checkout branch-name -Переход между ветками</li>
     </ol>
   </body>
 </html>
