--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <li>git checkout -b branch-name -Добавить новую ветку</li>
       <li>git pull -Стянуть изменения с удаленного репозитория</li>
       <li>git checkout branch-name -Переход между ветками</li>
+      <li>git clone "url" -Склонировать репозиторий</li>
     </ol>
   </body>
 </html>
