--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <li>git pull -Стянуть изменения с удаленного репозитория</li>
       <li>git checkout branch-name -Переход между ветками</li>
       <li>git clone "url" -Склонировать репозиторий</li>
+      <li>git branch -Посмотреть список веток</li>
     </ol>
   </body>
 </html>
